# Alphabot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  opencv.cpp  plantUML.wsd  sequence_diagram.wsd  status_diagram.wsd  test.py
Settings/: config.json  hsvValues.json
docs/: backlog.xlsx  mosquittoWeb.conf  plantUML.wsd  sequence_diagram.wsd  status_diagram.wsd
src/: Alphabot.cpp  Alphabot.h  Graffiti.cpp  Graffiti.h  ImageProcessing.cpp  ImageProcessing.h  KeyParser.cpp  KeyParser.h  Mqtt.cpp  Mqtt.h  Server.cpp  Server.h  hsvSaver.py  main.cpp  mqtt.py  settings.py
